# GRID-Example

./: .gitignore  CMakeLists.txt  ImGui.ini  README.md  test.json
shaders/: rendergpu.cs
src/: interface.cpp
src/gpu/: gpu.cpp
src/headers/gpu/: gpu.h
src/headers/pipelines/: pipeline.h
src/headers/ui/: sidebar.h  viewport.h
src/pipelines/: pipeline.cpp
src/ui/: sidebar.cpp  viewport.cpp
